--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,32 @@ body {
 	padding: 20px;
 }
 
+.app__header > h1 {
+	color: #fc3c3c;
+	font-size: 2rem;
+}
+
+.app__dropdown {
+	/* background-color: red; */
+}
+
+.app__right {
+	display: flex;
+	flex-direction: column;
+}
+
+.app__right .MuiCardContent-root {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+}
+
 .app__left {
 	flex: 0.9;
+}
+
+.app__chart {
+	flex-grow: 1;
 }
 
 .app__header {
@@ -21,6 +45,11 @@ body {
 	align-items: center;
 	margin-bottom: 20px;
 	justify-content: space-between;
+}
+
+.app__chartTitle {
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .app__stats {
