--- a/src/components/InfoBox/InfoBox.css
+++ b/src/components/InfoBox/InfoBox.css
@@ -1,33 +1,37 @@
 .infoBox {
-	flex: 1;
-	cursor: pointer;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  cursor: pointer;
 }
 
 .infoBox:not(:last-child) {
-	margin-right: 17px;
+  margin-right: 17px;
 }
 
-.infoBox--selected {
-	border-top: 10px solid greenyellow;
+.infoBox-selected {
+  border-top: 10px solid greenyellow;
 }
 
-.infoBox--red {
-	border-color: red;
+.infoBox-red {
+  border-color: red;
 }
 
 .infoBox__cases {
-	color: #cc1034;
-	font-weight: 600;
-	font-size: 1.75rem;
-	margin-bottom: 0.5rem;
+  color: #cc1034;
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 0.5rem;
 }
-.infoBox__cases--green {
-	color: lightgreen;
+
+.infoBox__cases-green {
+  color: lightgreen;
 }
 
 .infoBox__total {
-	color: #6c757d;
-	font-weight: 700 !important;
-	font-size: 0.8rem !important;
-	margin-top: 15px !important;
+  color: #6c757d;
+  font-weight: 700 !important;
+  font-size: 0.8rem !important;
+  margin-top: 15px !important;
 }
+/*# sourceMappingURL=InfoBox.css.map */
