--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,12 +1,14 @@
 .map {
-	height: 500px;
-	background-color: #fff;
-	padding: 1rem;
-	border-radius: 20px;
-	margin-top: 16px;
-	box-shadow: 0 0 8px -4px rgba(0, 0, 0, 0.5);
+  height: 500px;
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 20px;
+  margin-top: 16px;
+  -webkit-box-shadow: 0 0 8px -4px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 8px -4px rgba(0, 0, 0, 0.5);
 }
 
 .map .leaflet-container {
-	height: 100%;
+  height: 100%;
 }
+/*# sourceMappingURL=Map.css.map */
