--- a/src/components/InfoBox/InfoBox.css
+++ b/src/components/InfoBox/InfoBox.css
@@ -22,6 +22,7 @@
   font-weight: 600;
   font-size: 1.75rem;
   margin-bottom: 0.5rem;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .infoBox__cases-green {
