--- a/src/components/InfoBox/InfoBox.css
+++ b/src/components/InfoBox/InfoBox.css
@@ -10,23 +10,38 @@
 }
 
 .infoBox-selected {
-  border-top: 10px solid greenyellow;
+  border-top: 10px solid #bdfffb;
+}
+
+.infoBox-active {
+  border-color: #1bbae1;
 }
 
 .infoBox-red {
-  border-color: red;
+  border-color: #cc1034;
+}
+
+.infoBox .MuiTypography-colorTextSecondary {
+  font-family: 'Baloo Tamma 2', cursive;
 }
 
 .infoBox__cases {
-  color: #cc1034;
+  color: #bdfffb;
+  text-shadow: 0 0 10px #bdfffb;
   font-weight: 600;
   font-size: 1.75rem;
   margin-bottom: 0.5rem;
   font-family: 'Orbitron', sans-serif;
 }
 
-.infoBox__cases-green {
-  color: lightgreen;
+.infoBox__cases-red {
+  color: #cc1034;
+  text-shadow: 0 0 10px #cc1034;
+}
+
+.infoBox__cases-blue {
+  color: #1bbae1;
+  text-shadow: 0 0 10px #1bbae1;
 }
 
 .infoBox__total {
